Fix cutting off of the heatmap at the edge

--- a/src/styles/_habits.scss
+++ b/src/styles/_habits.scss
@@ -7,7 +7,7 @@ $cell-weekdays-width: 33px;
   grid-area: main;
   padding: 18px 36px 36px;
   margin-inline: auto;
-  width: min(100%, 950px);
+  width: min(100%, 965px);
 
   &-header {
     display: flex;
@@ -38,7 +38,7 @@ $cell-weekdays-width: 33px;
   grid-template-rows: $cell-height calc(
       (#{$cell-height} + #{$cell-margin} * 2) * 7 * var(--multiplier)
     );
-  grid-template-columns: min-content calc(54 * 15px);
+  grid-template-columns: min-content calc(55 * 15px);
   row-gap: 5px;
 
   .heatmap-months {
